autotests/syntax-tests/tests/negative/negative100.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var $ESWAP Name Name = : = ; = ; } ; 